# FoundationPose

./: .gitignore  BUILD_README.md  build_all_modern.sh  build_extensions.sh  estimater.py  hatch_build.py  main.py  offscreen_renderer.py  pixi.toml  pyproject.toml  readme.md  run_demo.py  run_linemod.py  run_ycb_video.py  setup.py
bundlesdf/mycuda/: setup.py
foundationpose/: Utils.py  __init__.py  datareader.py  estimator.py
foundationpose/bundlesdf/: nerf_helpers.py  nerf_runner.py  run_nerf.py  tool.py
foundationpose/learning/datasets/: h5_dataset.py  pose_dataset.py
foundationpose/learning/models/: network_modules.py  refine_network.py  score_network.py
foundationpose/learning/training/: predict_pose_refine.py  predict_score.py
mycpp/: build.sh
